--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Muthu",
   "license": "ISC",
+  "engines": {
+    "node": "18.x || 16.x"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
